test/negative/unary-U02.cfr
// Test for negative until constraint

a
 b ?
  c ?
  d ?
  [c until ]



